Refactor back to Java 11